# conductor

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  LICENSE  MIGRATION_ROADMAP.md  MODERN_DSL_ARCHITECTURE.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.kiro/steering/: product.md  structure.md  tech.md
choreo-headers/: choreo.h
choreo-op/: activation-relu-bf16.co  activation-relu-fp16.co  activation-relu-fp32-templated-kernel.co  addcdiv-dynamic-multibuf.co  addcdiv-dynamic.co  align.co  arith-builtins.co  attention-gcu-only-test.co  bitwise.co  chained-buffer-gcu-only-test.co  destination-passing-style.co  efficientattention-gcu-only-test.co  elem-double-buffers-gcu-only.co  elemwise-gcu-only-test-multi-launch-gcu2.co  elemwise-gcu-only-test-multi-launch-gcu3.co  elemwise-gcu-only-test.co  elemwise-global-input.co  elemwise-no-device.co  elemwise-opt.co  embedding-gcu-only-test.co  event-buffer-chain.co  event-double-buffer.co  execution_engine.co  flashattention-gcu-only-test.co  gather_lastdim.co  global_init.co  host-dataflow-loop-and-tile.co  host-device.co  id-double-buffers.co  id-multi-buffers.co  identity-tile-by-all.co  init_output.co  inthreads-producer-consumer.co  matmul-direct.co  matmul-dyn-direct.co  matmul-gcu-only-test.co  matmul-gpu-templated-kernel-literal.co  matmul-test-gpu-staging-out-at-local.co  matmul-test-gpu-staging-out-at-shared.co  mem_reuse.co  (+18 more)
conductor/: __init__.py  aot.py  backend.py  buffers.py  caching.py  callable.py  choreo_jit.py  context.py  custom_ops.py  dsl.py  dslgen.py  fusion.py  fusion_rules.py  gcu_backend.py  gcu_executor.py  gcu_host_wrapper.py  graph_analyzer.py  info.py  operator_registry.py
conductor/codegen/: __init__.py  buffers.py  choreo_dsl.py  device_kernels.py  dma_generator.py  dsl.py  dsl_builder.py  dsl_constants.py  dsl_generator.py  dsl_visitor.py  dslgen.py  dslgen_base.py  function_signature.py  fusion.py  graph.py  operation_factory.py  operator_registry.py  optimization.py  registry_based_templates.py  unified_operators.py
conductor/compiler/: __init__.py  backend_registry.py  callable.py  device.py  executor.py  gcu_backend.py  host_wrapper.py  jit_compiler.py  loader.py  topscc_utils.py
conductor/config/: README.md  __init__.py  caching.py  conductor_config.json  conductor_config.yaml  config.py  debug_artifacts.py  debug_tracer.py
conductor/device/: __init__.py
conductor/graph/: __init__.py  analyzer.py  buffer_naming.py  buffers.py  dag_naming.py  fusion.py  fusion_rules.py  graph_analyzer.py  graph_nodes.py  parallel_fusion.py
conductor/optimization/: __init__.py  buffers.py  dag_naming.py  fusion.py  graph_analyzer.py  graph_nodes.py
conductor/pipeline/: __init__.py  gcu_pipeline.py
conductor/runtime/: __init__.py  aot.py  choreo_jit.py  gcu_backend.py  gcu_executor.py  gcu_host_interface.py  jit.py  loader.py
conductor/utils/: __init__.py  artifacts.py  cache.py  caching.py  conductor_config.json  config.py  constants.py  exceptions.py  info.py  logging.py  naming.py  profiler.py  regression.py  (+5 more)
debug_dir/: host_wrapper_kernel_33f49944.cpp  host_wrapper_kernel_6788ff95.cpp  host_wrapper_kernel_6f75e5bf.cpp  kernel_33f49944_compilation.co  kernel_56613bbb.co
docs/: README.md  architecture_analysis.md
examples/: README.md  __init__.py  add_example.py  add_mul_fused_example.py  advanced_fusion.py  basic_usage.py  benchmarking.py  conductor_demo.py  custom_op_example.py  custom_operations.py  debug_mul_example.py  debug_simple_add.py  mul_example.py  performance_monitoring.py  reduce_mean_fusion_example.py  subgraph_example.py  unified_architecture_test.py
samples/: README.md
tests/: README.md  __init__.py  conftest.py  test_fx_to_dag_conversion.py  test_package_structure.py  test_runner.py
tools/: init-spec.py
(+58 files in other folders)
